--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Page Title</title>
-  </head>
 
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
-  
+<!DOCTYPE HTML>
+<!-- ICS20-UNIT1-03-HTML-Hello-World -->
+<html lang="en-ca">
+<head>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <meta charset="utf-8">
+    <meta name="description" content="My second webpage, with proper bomborasstyle">
+    <meta name="keywords" content="Mr. Coxall">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <title>Cities</title>
+    <style>
+      
+        #myHeader {
+            background-color: tomato;
+            color: white;
+            padding: 10px;
+        }
+        body {
+            background-color: green;
+        }
+        .city {
+            font-size: 1.5em;
+        }
+    </style>
+</head>
+<body>
+    <!-- An element with a unique id -->
+    <h1 id="myHeader">Capital Cities</h1>
+
+    <!-- Multiple elements with the same class -->
+    <h2 class="city">Ottawa</h2>
+    <p>Ottawa is the capital of Canada.</p>
+    <img src="flag-of-Canada.png" alt="Canada">
+
+    <h2 class="city">London</h2>
+    <p>London is the capital city of England.</p>
+    <img src="flag-of-United-Kingdom.png" alt="UK">
+
+    <h2 class="city">Paris</h2>
+    <p>Paris is the capital city of France.</p>
+    <img src="flag-of-France.png" alt="France">
+
+    <h2 class="city">Vatican City</h2>
+    <p>Vatican City is the capital city of Vatican City.</p>
+    <img src="flag-of-Vatican-City.png" alt="Vatican City">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script<!-- Accent-colored raised button with ripple -->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  Button
+</button>
+<!-- Colored FAB button -->
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <i class="material-icons">add</i>
+</button>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div id="container"/>
+<script>
+  var button = document.createElement('button');
+  var textNode = document.createTextNode('Click Me!');
+  button.appendChild(textNode);
+  button.className = 'mdl-button mdl-js-button mdl-js-ripple-effect';
+  componentHandler.upgradeElement(button);
+  document.getElementById('container').appendChild(button);
+</script>
+</body>
 </html>
