--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <meta charset="utf-8">
     <meta name="description" content="My second webpage, with proper bomborasstyle">
+    <body><script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script></body>
     <meta name="keywords" content="Mr. Coxall">
     <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <title>Cities</title>
