--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
-
 <!DOCTYPE HTML>
 <!-- ICS20-UNIT1-03-HTML-Hello-World -->
 <html lang="en-ca">
 <head>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     
     <meta charset="utf-8">
-    pink.min.css
     <meta name="description" content="My second webpage, with proper style">
-    <body><script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script></body>
-   <!-- Colored FAB button with ripple -->
-<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-  <i class="material-icons">add</i>
-</button>
     <meta name="keywords" content="Mr. Coxall">
     <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <title>Cities</title>
     <style>
-      material.min.js=dagadee
         #myHeader {
             background-color: tomato;
             color: white;
@@ -51,6 +45,12 @@
     <h2 class="city">Vatican City</h2>
     <p>Vatican City is the capital city of Vatican City.</p>
     <img src="flag-of-Vatican-City.png" alt="Vatican City">
-  
 
+    <!-- Colored FAB button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <i class="material-icons">add</i>
+    </button>
+
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</body>
 </html>
