--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
     <title>Cities</title>
     <style>
         #myHeader {
-            background-color: tomato;
-            color: white;
+            background-color: blue; /* Header now has a blue background */
+            color: white; /* Text in header is white */
             padding: 10px;
         }
         body {
-            background-color: green;
+            background-color: white; /* Body now has a white background */
         }
         .city {
             font-size: 1.5em;
+            color: blue; /* City names are now blue */
+        }
+        p {
+            color: black; /* Paragraph text remains black */
+        }
+        button.mdl-button--fab {
+            background-color: blue; /* The button is now blue */
+            color: white; /* Button icon is white */
         }
     </style>
 </head>
