--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- ICS20-UNIT1-03-HTML-Hello-World -->
 <html lang="en-ca">
 <head>
+    <link rel="icon" href="IMG_0030.png" type="image/jpeg">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
